# adsb-weather

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
edge/: capture_aircraft_json.py
src/adsb_weather/: __init__.py
src/adsb_weather/acquisition/: capture_aircraft_json.py  read_radiosonde.py
src/adsb_weather/analysis/: aircraft_analysis.py  pressure_ia_analysis.py  rs_analysis.py
src/adsb_weather/physics/: pressure.py
src/adsb_weather/pipeline/: make_interim_adsb.py
tests/: test_smoke.py
