[project]
name = "adsb-weather"
version = "0.1.0"
description = "Estimation des conditions atmosphériques à partir de données d’avion (ADS-B / Mode-S)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Antoine Dieu", email = "dieu.antoine92@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pymodes>=3.3.0",
]

[project.scripts]
adsb-weather = "adsb_weather:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "N", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["adsb_weather"]
